Name:                   tool
Version:                0.0.0
Author:                 Romain Ruetschi <romain.ruetschi@gmail.com>
Maintainer:             Romain Ruetschi <romain.ruetschi@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:
-- Description:
Cabal-Version:          >= 1.20
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Language.Tool
                      , Language.Tool.Parser
                      , Language.Tool.Lexer
                      , Language.Tool.PrettyPrinter
  Other-Modules:
  Build-Depends:        base >= 4 && < 5
                      , parsec >= 3.1.7 && < 3.2
                      , pretty >= 1.1.1.2 && < 1.2

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src, test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , parsec
                      , pretty
                      , QuickCheck

Source-Repository head
  Type:                 git
  Location:             https://github.com/romac/haskell-tool.git

