Name:                   tool
Version:                0.0.0
Author:                 Romain Ruetschi <romain.ruetschi@gmail.com>
Maintainer:             Romain Ruetschi <romain.ruetschi@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:
-- Description:
Cabal-Version:          >= 1.20
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Language.Tool
                      , Language.Tool.Parser
                      , Language.Tool.Lexer
                      , Language.Tool.PrettyPrinter
  Other-Modules:
  Build-Depends:        base >= 4 && < 5
                      , parsec >= 3.1
                      , pretty >= 1.1

Source-Repository head
  Type:                 git
  Location:             https://github.com/romac/haskell-tool.git

